--- a/src/components/CustomHeader/styles.css
+++ b/src/components/CustomHeader/styles.css
@@ -12,3 +12,9 @@
 .ant-menu-item-selected {
     background-color: transparent !important;
   }
+
+  .ant-menu-overflow-item:focus, .ant-menu-item:focus {
+    background-color: transparent !important;
+    border: none !important;
+    outline: none !important;
+  }
